@@ -77,6 +77,8 @@ Release 1.1 (in development)
 
 * #306: Added :event:`env-get-outdated` event.
 
+* #590: Added ``caption`` option to graphviz directives.
+
 * C++ domain now supports array definitions.
 
 
